app/assets/stylesheets/typewriter.scss
/* Colors */
$mainColor: #b26666;
$secondColor: #ff8b94;
$thirdColor: #b26167;
$fourthColor: #eec3c3;

/* General */
.clear { clear: both; }
.fleft { float: left; }

.type-key {
  list-style: none;
  width: 8px;
  height: 8px;
  background-color: $mainColor;
  border-radius: 100%;
  margin: 2px;
  float: left;
}

/* iPhone 5 ----------- */
@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
  .typewriter-text {
    position: absolute;
    margin-left: 35px;
    margin-top: 0px;
  }

  .typewriter {
    position: relative;
    left: 30px;
    top: 60px;
  }

  .typewriter-box {
    padding: 0px;
  }

  .find-me-text-box {
    margin-left: 60px;
    margin-top: 45px;
  }

  .btn-circle-footer {
    width: 60px;
    height: 60px;
    padding: 10px 8px;
    font-size: 2em;
    line-height: 1.33;
    border-radius: 35px;
    background-color: #ff8b94;
  }

  .footer-social {
    margin-top: 20px;
    margin-left: 1em;
  }
}

/* iPhone 6 ----------- */
@media only screen and (min-device-width: 375px) and (max-device-height: 667px) {
  .typewriter-text {
    position: absolute;
    margin-left: 55px;
    margin-top: 0px;
  }

  .typewriter {
    position: relative;
    left: 50px;
    top: 60px;
  }

  .typewriter-box {
    padding: 0px;
  }

  // .find-me-text-box {
  //   margin-left: 80px;
  //   margin-top: 45px;
  // }
  //
  // .find-me-text-links {
  //   margin-left: 45px;
  //   padding-top: 10px;
  // }
}

/* iPhone 6+ ----------- */
@media only screen and (min-device-width: 414px) and (max-device-height: 736px) {
  .typewriter-text {
    position: absolute;
    margin-left: 85px;
    margin-top: 0px;
  }

  .typewriter {
    position: relative;
    left: 80px;
    top: 60px;
  }

  .typewriter-box {
    padding: 0px;
  }

  // .find-me-text-box {
  //   margin-left: 110px;
  //   margin-top: 45px;
  // }
  //
  // .find-me-text-links {
  //   margin-left: 75px;
  //   padding-top: 10px;
  // }
}


/* Desktops and laptops ----------- */
@media only screen  and (min-width : 1224px) {
  .typewriter-text {
    position: absolute;
    margin-top: 5px;
  }

  .typewriter {
    position: relative;
    top: 60px;
  }

  .typewriter-box {
    padding: 0px;
  }

  .find-me-text-box {
    margin-left: 110px;
    margin-top: 5px;
    // margin-top: 45px;
  }
  //
  // .find-me-text-links {
  //   margin-left: 75px;
  //   padding-top: 10px;
  // }

  .btn-circle-footer {
    width: 70px;
    height: 70px;
    padding: 10px 16px;
    font-size: 0.29em;
    line-height: 1.33;
    border-radius: 35px;
    background-color: #ff8b94;
  }

  .footer-social {
    margin-top: -20px;
    margin-left: 0.2em;
  }
}

/* Large screens ----------- */
@media only screen  and (min-width: 1824px) {
  .typewriter-text {
    position: absolute;
    margin-left: 200px;
    margin-top: 0px;
  }

  .typewriter {
     position: relative;
     left: 190px;
     top: 60px;
  }

  .typewriter-box {
    padding: 0px;
  }

  // .find-me-text-box {
  //   margin-left: 110px;
  //   // margin-top: 45px;
  // }
  //
  // .find-me-text-links {
  //   margin-left: 75px;
  //   padding-top: 10px;
  // }
}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
  .typewriter-text {
    position: absolute;
    margin-left: 85px;
    margin-top: 0px;
  }

  .typewriter {
    position: relative;
    left: 80px;
    top: 60px;
  }

  .typewriter-box {
    padding: 0px;
  }

  // .find-me-text-box {
  //   margin-left: 70px;
  //   margin-top: 45px;
  // }
  //
  // .find-me-text-links {
  //   margin-left: 35px;
  //   padding-top: 10px;
  // }
}

/* Samsung Galaxy S5 ----------- */
@media only screen and (min-device-width: 360px) and (max-device-height: 640px) {
  .typewriter-text {
    position: absolute;
    margin-left: 55px;
    margin-top: 0px;
  }

  .typewriter {
    position: relative;
    left: 50px;
    top: 60px;
  }

  .typewriter-box {
    padding: 0px;
  }

  // .find-me-text-box {
  //   margin-left: 80px;
  //   margin-top: 45px;
  // }
  //
  // .find-me-text-links {
  //   margin-left: 45px;
  //   padding-top: 10px;
  // }
}

/* Roll */
.typewriter .roll { height: 35px; width: 182px; }

.typewriter .roll .out {
  height: 10px;
  width: 100px;
  background-color: $secondColor;
  margin: 0 38px;
  border-radius: 5px 5px 0 0;
}
.typewriter .roll .left,
.typewriter .roll .right { width: 14px; }

.typewriter .roll .center { width: 150px; height: 25px; background-color:$mainColor; }

.firstpart {
  width: 7px;
  height: 25px;
  background-color: $mainColor;
}
.secondpart {
  margin-top: 8px;
  width: 7px;
  height: 10px;
  background-color: $mainColor;
}


/* Typerwriter roll Paper */
.typewriter .paper {
  width: 100px;
  height: 60px;
  margin: -25px 0 0 38px;
  position: absolute;
  background-color: #fff;
  -webkit-animation: showPaper 20s linear;
  -moz-animation: showPaper 20s linear;
  animation: showPaper 20s linear;
}

.typewriter .paper .papertext {
  width: 80px;
  height: 5px;
  margin: 7px 0 0 9px;
  display: block;
  background-color: $thirdColor;

  &:first-child {
    margin-top: 8px;
  }
}

/* Typewriter body */
.typewriter .content {
  width: 150px;
  height: 150px;
  margin: 0 18px 0 14px;
}


/* Typewriter body Top */
.typewriter .content .top-content {
  height: 42px;
  border-radius: 0 0 15px 15px;
  background-color: $secondColor;
  z-index: 5;
  position: relative;
  padding-left: 13px;
}

.typewriter .content .top-content .rounded-left {
  width: 20px;
  height: 20px;
  margin: 4px 0 0 2px;
  border: 7px solid $mainColor;
  border-radius: 40px;
  background-color: #fff;
}

.typewriter .content .top-content .lettersbar {
  width: 73px;
  height: 32px;
  margin: 5px 2px;
  border-radius: 0 0 80px 80px;
  background-color: #fff;
}

.typewriter .content .top-content .rounded-right {
  width: 20px;
  height: 20px;
  margin-top: 4px;
  border: 7px solid $mainColor;
  border-radius: 40px;
  background-color: #ebebeb;
}


/* Typewriter body Bottom */
.typewriter .content .bottom-content {
  height: 75px;
  margin: -10px 5px 0 5px;
  border-radius: 0 0 30px 30px;
  background-color: $fourthColor;
}

.typewriter .content .bottom-content ul.first {
  padding: 12px 0 0 8px;
}

.typewriter .content .bottom-content ul.second {
  padding: 7px 0 0 3px;
}

.typewriter .content .bottom-content ul.third {
  padding: 7px 0 0 14px;
}

.typewriter .content .bottom-content ul.last {
  padding: 4px 0 0 33px;

  li {
    width: 70px;
    border-radius: 5px;
  }
}


/* Keyframes */
@-webkit-keyframes showPaper {
  0% { margin-top: 16px; }
  100% { margin-top: -25px; }
}
@-moz-keyframes showPaper {
  0% { margin-top: 16px; }
  100% { margin-top: -25px; }
}
@keyframes showPaper {
  0% { margin-top: 16px; }
  100% { margin-top: -25px; }
}

